Se crea el footer del sitio

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae rerum eos tempora repudiandae, soluta saepe. Perspiciatis illum sit molestias velit ut porro deleniti blanditiis ipsam fugiat, delectus unde, aut dolorem?</p>
 
       <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vel, consequatur nihil ab, quo voluptatum itaque vitae in libero incidunt consectetur distinctio autem, fugit laborum commodi eaque quos omnis magni!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vel, consequatur nihil ab, quo voluptatum itaque vitae in libero incidunt consectetur distinctio autem, fugit laborum commodi eaque quos omnis magni asdsadas!</p>
 
       </article>
 
@@ -49,6 +49,7 @@
         <ul>Flota</ul>
         <ul>Mapa</ul>
         <ul>Contacto</ul>
+        <p>Todos los derechos reservados.&copy;</p>
       </div>
     </footer>
     
